fixing bug on mobile which prevents newsletter form to filled out

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1210,7 +1210,7 @@ em {
 		width: 100%;
 		height: auto;
 		left: 0px;
-		top: 0px;
+		top: 0%;
 		right: 0px;
 		bottom: 0px;
 		margin: 0 0 0 0;
